--- a/assets/css/style-universities.css
+++ b/assets/css/style-universities.css
@@ -343,7 +343,7 @@ h1, h2, h3 {
 }
 
 .unitopcontainer h3 {
-        font-size: 1.6vw;
+    font-size: 1.6vw;
 }
 
 .uniheadline { grid-area: uniheadline; }
@@ -354,6 +354,7 @@ h1, h2, h3 {
     place-self: center;
     color: #203F7E;
 }
+
 
 .universities {
     display: grid;
@@ -401,7 +402,6 @@ h1, h2, h3 {
 .unicontainer {
     display: grid;
     max-width: 100%;
-    font-size: 120%;
     margin-left: 2.5vw;
     margin-right: 2.5vw;
     border-collapse: collapse;
@@ -415,6 +415,10 @@ h1, h2, h3 {
     'programcontainer programinfocontainer programinfocontainer'
     'studentlife studentlife studentlife';
     
+}
+
+.unicontainer p {
+  font-size: 1.1vw;
 }
 
 .programcontainer { grid-area: programcontainer; }
@@ -554,8 +558,6 @@ h1, h2, h3 {
 /* ----------------------- Program info -------------------------- */
 
 .programinfocontainer {
-    margin-left: 2.5vw;
-    margin-right: 2.5vw;
     background-color: white;
 }
 
@@ -563,19 +565,20 @@ h1, h2, h3 {
     display: grid;
     margin-left: 2.5vw;
     margin-right: 2.5vw;
-    padding-top: 2.5vh;
-    padding-bottom: 2.5vh;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
     border-collapse: collapse;
-    grid-row-gap: 50px;
-    grid-column-gap: 50px;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
+    grid-row-gap: 25px;
+    grid-column-gap: 25px;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
     justify-content: center;
     justify-items: center;
     grid-template-areas:
     'admissionvideo admissiontext'
-    'countrytext countryimage'
+    'countrytext countryimage';
 }
+
 
 .admissionvideo { grid-area: admissionvideo; }
 .admissiontext { grid-area: admissiontext; }
@@ -587,6 +590,7 @@ h1, h2, h3 {
     color: #ffffff;
     border: none;
     padding: 2%;
+    margin-bottom: 2.5vh;
     cursor: pointer;
     border-radius: 7px;
     box-shadow: 0 5px rgba(48, 48, 48, 0.23);
@@ -596,7 +600,7 @@ h1, h2, h3 {
 
 .yt {
     width: 100%;
-    height: 15vh;
+    height: 100%;
 }
 
 .admissionvideo {
@@ -615,7 +619,7 @@ h1, h2, h3 {
 
 .admissiontext {
     width: 100%;
-    height: auto;
+    height: 100%;
     align-items: start;
 }
 
@@ -631,13 +635,11 @@ h1, h2, h3 {
 
 .countryimage {
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 .countryimage img {
     width: 100%;
-    height: 15vh;
-    top:0;
-    left: 0;
+    height: 100%;
 }
 
 .mapcontainer {
@@ -663,7 +665,7 @@ h1, h2, h3 {
 
 .map {
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 .map iframe {
@@ -697,8 +699,8 @@ h1, h2, h3 {
     border-collapse: collapse;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
-    grid-row-gap: 50px;
-    grid-column-gap: 50px;
+    grid-row-gap: 2.5vw;
+    grid-column-gap: 2.5vh;
     justify-content: center;
     align-items: center;
     justify-items: center;
@@ -769,81 +771,68 @@ a {
   color: white;
 }
 
-/* ----------------------- Responsiveness - Even Larger screen -------------------------- */
-
-
-@media only screen and (min-width: 1800px) {
-    
-    .programinfo {
-        margin-left: 5vw;
-        margin-right: 5vw;
-        margin-top: 5vh;
-        margin-bottom: 5vh;
-        padding: 0;
-    }
-
-    .programinfo iframe{
-        width: 80%;
-        height: 16vh;
-    }
-
-
-    .programinfo img{
-        width: 80%;
-        height: 16vh;
-    }
-
-    .admissiontext {
-        margin: auto;
-    }
-
-    .countrytext {
-        margin: auto;
-    }
-
-    
-
-
-}
-
-
 /* ----------------------- Responsiveness - Larger screen -------------------------- */
 
 
-@media only screen and (max-width: 1100px) {
-    .programinfo {
-        display: grid;
-        margin-left: 2.5vw;
-        margin-right: 2.5vw;
-        padding-top: 2.5vh;
-        padding-bottom: 2.5vh;
-        border-collapse: collapse;
-        grid-row-gap: 50px;
-        grid-column-gap: 50px;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto;
-        justify-content: center;
-        justify-items: center;
-        grid-template-areas:
-        'admissionvideo'
-        'admissiontext'
-        'countryimage'
-        'countrytext';
-    }
- 
-    .programinfocontainer {
-        margin: 0;
-    }
+@media only screen and (max-width: 1200px) {
+  
+  .programinfo {
+    padding-top: 2.5vh;
+    padding-bottom: 2.5vh;
+  }
+  
 
-    .introtext {
-        height: 20vh;
-    }
+  .admissionvideo {
+    width: 100%;
+    height: 80%;
+    position: relative;
+
+}
+.admissionvideo iframe {
+    width: 100%;
+    height: 100%;
+    top:0;
+    left: 0;
+    position: absolute;
+}        
+
+.countryimage {
+    width: 100%;
+    height: 80%;
+}
+.countryimage img {
+    width: 100%;
+    height: 100%;
+    top:0;
+    left: 0;
+}        
+
 
 }
 
 /* ----------------------- Responsiveness - Tablet+ -------------------------- */
 
 @media only screen and (max-width: 870px) {
+ 
+  .introgrid {
+    margin-top: 8%;
+    height: 60%;
+    /* background-color: rgb(41, 70, 12); */
+  }
+  .introtext {
+    width: 70%;
+    height: 15vh;
+    margin-top: 17%;
+    margin-left: 30%;
+    font-size: 2vw;
+    /* background-color: darkgoldenrod; */
+  }
+
+  .arrow {
+    margin-top: 3%;
+    width: 20px;
+    height: 20px;
+}  
 
 .universities {
     grid-template-columns: repeat(5, 1fr);
@@ -863,90 +852,23 @@ a {
     transform: scale(1.1);
 }
 
+.unicontainer {
+  display: grid;
+  max-width: 100%;
+  overflow: hidden;
+  border-collapse: collapse;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-row-gap: 2.5vh;
+  justify-content: center;
+  align-items: start;
+  justify-items: center;
+  grid-template-areas:
+  'programcontainer'
+  'programinfocontainer'
+  'studentlife';        
 }
 
-/* ----------------------- Responsiveness - Tablet -------------------------- */
-   
-   @media only screen and (max-width: 768px) {
-      
-        .introgrid {
-          margin-top: 8%;
-          height: 60%;
-          /* background-color: rgb(41, 70, 12); */
-        }
-        .introtext {
-          width: 70%;
-          height: 15vh;
-          margin-top: 17%;
-          margin-left: 30%;
-          font-size: 2vw;
-          /* background-color: darkgoldenrod; */
-        }
-
-        .arrow {
-            margin-top: 3%;
-            width: 20px;
-            height: 20px;
-        }  
-      
-
-    .universities {
-        grid-template-columns: repeat(5, 1fr);
-        margin-left: 0;
-        margin-right: 0; 
-    }
-
-
-    .universities img {
-        height: 6vh;
-        transition: transform .2s;
-        place-self: center;
-    }
-        
-    
-    .tablinks.active {
-        transform: scale(1.1);
-    }
-    
-    .unitopcontainer {
-        display: grid;
-        max-width: 100%;
-        overflow: hidden;
-        font-size: 120%;
-        margin-left: 5vw;
-        margin-right: 5vw;
-        border-collapse: collapse;
-        margin-top: 2.5vh;
-        margin-bottom: 2.5vh;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto;
-        justify-content: center;
-        align-items: center;
-        justify-items: center;
-        grid-template-areas:
-        'uniheadline'
-        'universities';
-    }
-
-
-    .unicontainer {
-        display: grid;
-        max-width: 100%;
-        overflow: hidden;
-        font-size: 120%;
-        border-collapse: collapse;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto;
-        grid-row-gap: 2.5vh;
-        justify-content: center;
-        align-items: start;
-        justify-items: center;
-        grid-template-areas:
-        'programcontainer'
-        'programinfocontainer'
-        'studentlife';        
-    }
-    
 
     .programinfo {
         display: grid;
@@ -955,8 +877,8 @@ a {
         padding-top: 2.5vh;
         padding-bottom: 2.5vh;
         border-collapse: collapse;
-        grid-row-gap: 50px;
-        grid-column-gap: 50px;
+        grid-row-gap: 25px;
+        grid-column-gap: 25px;
         grid-template-columns: 1fr;
         grid-template-rows: auto;
         justify-content: center;
@@ -969,7 +891,20 @@ a {
     }
  
     .programinfocontainer {
-        margin: 0;
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+
+    .unicontainer h3 {
+      font-size: 2vw;
+    }
+
+    .unicontainer p {
+      font-size: 1.5vw;
+    }
+
+    .unicontainer li {
+      font-size: 1.5vw;
     }
 
         .mapcontainer {
@@ -1042,10 +977,50 @@ a {
             left: 0;
         }        
 
+
         .maptext {
             margin-top: 2.5vh;
             margin-bottom: 2.5vh;
         }
+
+
+}
+
+/* ----------------------- Responsiveness - Tablet -------------------------- */
+   
+   @media only screen and (max-width: 768px) {
+    
+    .universities {
+        grid-template-columns: repeat(5, 1fr);
+        margin-left: 0;
+        margin-right: 0; 
+    }
+
+
+    .universities img {
+        height: 6vh;
+        transition: transform .2s;
+        place-self: center;
+    }
+        
+    
+    .tablinks.active {
+        transform: scale(1.1);
+    }
+    
+
+    .unitopcontainer h3 {
+      font-size: 2.5vw;
+  }  
+
+    
+    .unicontainer h3 {
+      font-size: 3vw;
+    }
+
+    .unicontainer p {
+      font-size: 3vw;
+    }
 
         footer {
             margin-top: 0px;
