--- a/assets/css/style-universities.css
+++ b/assets/css/style-universities.css
@@ -487,16 +487,15 @@ h1, h2, h3 {
     color: #777;
     font-weight: bold;
     float: right;
-    margin-left: 5px;
     transition: 0.2s;
 
 }
   
 .programcontainer i {
+    font-size: 1.5vw;
     color: #777;
     font-weight: bold;
     float: right;
-    margin-left: 5px;
     transition: 0.2s;
 
 }
@@ -772,6 +771,13 @@ a {
 }
 
 /* ----------------------- Responsiveness - Larger screen -------------------------- */
+
+@media only screen and (min-width: 1400px) {
+  
+  .programcontainer i {
+    margin-top: 0.75vh;
+  }
+}
 
 
 @media only screen and (max-width: 1200px) {
