--- a/assets/css/style-universities.css
+++ b/assets/css/style-universities.css
@@ -591,17 +591,11 @@ h1, h2, h3 {
     color: #ffffff;
     border: none;
     padding: 2%;
-    margin-bottom: 2.5vh;
     cursor: pointer;
     border-radius: 7px;
     box-shadow: 0 5px rgba(48, 48, 48, 0.23);
     outline: none;
 
-}
-
-.yt {
-    width: 100%;
-    height: 100%;
 }
 
 .admissionvideo {
@@ -619,13 +613,15 @@ h1, h2, h3 {
 }
 
 .admissiontext {
-    width: 100%;
-    height: 100%;
-    align-items: start;
+  margin: auto auto;
 }
 
 .admissiontext h3 {
     margin: 0;
+}
+
+.countrytext {
+  margin: auto auto;
 }
 
 .countrytext h3 {
