--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -1,3 +1,5 @@
+
+
 html {
   height: 100%;
   margin: 0;
@@ -12,6 +14,9 @@ body {
   padding: 0;
   background-color: #EBF3FA;
 }
+
+/*   .......................... Contact us btn ..........................  */
+
 
 /*   .......................... Contact us btn ..........................  */
 
@@ -77,7 +82,6 @@ body {
 .contact-button {
   margin-top: 50px;
 }
-
 /*   .......................... nav-bar ..........................  */
 
 .navbar {
@@ -483,7 +487,17 @@ body {
   }
 }
 
-/*   ..........................  Footer ..........................  */
+/* --------------footer---------------- */
+footer h4 {
+  font-size: 18px;
+  margin-left: 20px;
+}
+
+footer p {
+  margin-left: 20px;
+  margin-top: 40px;
+  font-size: 16px;
+}
 
 footer {
   margin-top: 5%;
@@ -521,9 +535,46 @@ footer {
   text-align: center;
 }
 
+.service-tab i {
+  position: relative;
+  font-size: 150%;
+  float: left;
+  margin-top: -10%;
+  margin-left: 20px;
+}
+
 a {
   color: white;
 }
+
+@media only screen and (max-width: 960px) {
+
+ footer p {
+      font-size: 15px;
+  }
+}
+
+@media only screen and (max-width: 830px) {
+  footer h4 {
+      font-size: 16px;
+  }
+ footer p {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 715px) {
+ footer p {
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 460px) {
+   footer h4 {
+    font-size: 10px;
+}
+ }
+
 
 /*   .......................... RESPONSIVE  ..........................  */
 
